# spbstu-iccs-mcs

./: .gitignore  LICENSE  README.md
ICCS/3_sem/OOP/Phone_Book/: AddNew.h  EditLine.h  GlobVar.h  MyTerran.cpp  MyWidget.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
ICCS/3_sem/Дискретная математика/Большая и Малая Арифметика/: globals.h  Большая и Малая Арифметика.cpp
ICCS/4_sem/Архитектура СК/: Raid.py
ICCS/4_sem/Базы Данных/Databasesconnect/: db.py
ICCS/4_sem/Микроконтроллеры/: Лаб4.c
ICCS/4_sem/ТАУ/: Р24(3).HEIC  Р24(6).HEIC
ICCS/4_sem/Теория Графов/CLIPS_Song_Recomendation/: SongsRecom.clp
ICCS/4_sem/Теория Графов/Lab_1_Laplas_Distr/: ListOfHamiltonianCycles.txt  MyGraph.cpp  MyGraph.h  globals.cpp  main.cpp
ICCS/4_sem/ЦК/ImgBot/: PyCV.py
ICCS/5_sem/Algorithm_Theory/fxlab/: pom.xml
ICCS/5_sem/Algorithm_Theory/Курсач/:  Casio X Ayzek.circ
ICCS/5_sem/English/3/: ThirdPres.pptx
ICCS/5_sem/Haskell/Another_parser/: Check.txt
ICCS/5_sem/Haskell/CodirovkaIzo/: CodirovkaIzo.cabal
ICCS/5_sem/Haskell/KursachFP/: stack.yaml
ICCS/5_sem/Haskell/OtherFractals/: barnsly.hs
ICCS/5_sem/SuperHacker/: encBin.txt  orgBin.txt  text.txt
ICCS/6_sem/Формальные языки/Lab5_FA/Lab_5/: Lab5.cabal
ICCS/7_sem/UNIX_OS/: список пользователей
iccs/4-sem/automatic-control-theory/: work(1).HEIC  work(2).HEIC  work(4).HEIC
iccs/5-sem/haskell/: biography.txt  stack.yaml
iccs/5-sem/haskell-additional-work/: dec-bin.txt  stack.yaml
iccs/7-sem/quantum-computing/: quantum_algorithms.ipynb
iccs/7-sem/srw/: computer_vision.tex
iccs/7-sem/unix-os/: script.sh
(+472 files in other folders)
