cabal-version: 2.4
name: Lab5
version: 0.1.0.0
synopsis: Formal Languages Lab 5
description: LL(1) Parser with Pixel Pattern Generator
license: MIT
author: Your Name
maintainer: your.email@example.com
category: Language
build-type: Simple

executable Lab5
  main-is: Main.hs
  other-modules: Lib
  build-depends: base >=4.14.1.0 && <5
               , threepenny-gui >=0.9.0.0
               , random >=1.2.0
               , containers
               , directory
               , megaparsec >=9.0.0
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall 